# KAIST-Mobility-Challenge-H6

./: .gitignore  .gitmodules  1_1.py  1_2.py  1_2_cc.py  1_2_ccc.py  1_2_f.py  1_2_g.py  1_2_saji.py  3_driver.py  3_upper.py  4_way_intersection.py  CAV_01.py  Dockerfile  README.md  cav_waypoint_follower.py  check_path.py  control_code.py  controller.py  converted_path1_1.json  demo3.py  demof.py  entrypoint.sh  extracted_dz_51_46_1.csv  extracted_dz_60_52_1.csv  inter_g.py  intersection.py  make_full_path_21loop.py  make_spline.py  my_driver1_1.py  my_driver1_2.py  my_driver1_2_collision.py  new_path.json  path1_1.py  path1_1_rotary.csv  path1_2_xplus0p2.json  path1_2_zone.csv  path1_2c.json  path3_1_out_zone.csv  path3_2_out_zone.csv  (+26 more)
etc/: check_path.py  make_spline.py  path_generator.py  path_shifted.py
pkg_task_1_1/: package.xml
pkg_task_1_1/launch/: competition.launch.py
pkg_task_1_1/src/: README.md
pkg_task_1_2/: package.xml
pkg_task_2/: package.xml
pkg_task_3/: package.xml
task/: 3_cross_demo.py
task1-1/: pure_pursuit_pid.py  task1_1.py
task1-2/: 1_2_driver.py
task1_2/: 1_2.py  1_2_u.py  1_2_u_f.py
task2/: README.md  controller.py  decision_fsm.py  path_2_3.json  projection.py  task_2_ace.py  task_2_legend.py  task_2_legend_ace.py  visualization_proj.py
task3/: 3_cross.py  3_sum.py  all.py  cross.py  data_log_v1_174322.csv  data_log_v2_174322.csv  data_log_v3_174322.csv  data_log_v4_174322.csv  decision.py  final_task3.py  hmm.py  hv.py  path3_2.json  path3_3.json  path3_4.json  projection.py  round.py  vis.py
testbed/: README.md  (+5 more)
(+54 files in other folders)
